@@ -2,7 +2,6 @@ package com.krzysiek.recruiting.service;
 
 import com.krzysiek.recruiting.config.StorageProperties;
 import com.krzysiek.recruiting.dto.FileDTO;
-import com.krzysiek.recruiting.dto.UserDTO;
 import com.krzysiek.recruiting.enums.FileType;
 import com.krzysiek.recruiting.exception.AccessDeniedException;
 import com.krzysiek.recruiting.exception.StorageException;
@@ -14,6 +13,10 @@ import com.krzysiek.recruiting.model.User;
 import com.krzysiek.recruiting.repository.FileRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.core.io.Resource;
+import org.springframework.core.io.UrlResource;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -25,8 +28,9 @@ import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.List;
 import java.util.Objects;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 @Service
 public class FileService implements StorageService {
@@ -76,7 +80,7 @@ public class FileService implements StorageService {
                 throw new StorageException("Bad file extension: " + extension + ". All allowed extensions are: " + storageProperties.getAllowedExtensions());
             }
 
-            Long ownerId = getFileOwnerId();
+            Long ownerId = getCurrentUserId();
             String uniqueFileName = createUniqueFileName(fileName, ownerId);
             if (isFileAlreadyExists(uniqueFileName)) {
                 throw new StorageException("File already exists");
@@ -93,22 +97,23 @@ public class FileService implements StorageService {
             try (InputStream inputStream = file.getInputStream()) {
                 Files.copy(inputStream, destinationFile, StandardCopyOption.REPLACE_EXISTING);
             }
-            saveFileToDatabase(new FileDTO(fileName, ownerId, extension, fileType, load(uniqueFileName).toString()));
+            saveFileToDatabase(new FileDTO(uniqueFileName, ownerId, extension, fileType, load(uniqueFileName).toString()));
         } catch (Exception ex) {
             throw throwCorrectException.handleException(ex);
         }
     }
 
     @Override
-    public Stream<Path> loadAll() {
-        try (Stream<Path> paths = Files.walk(this.rootLocation, 1)) {
-            return paths
-                    .filter(path -> !path.equals(this.rootLocation))
-                    .map(this.rootLocation::relativize)
-                    .toList()
-                    .stream();
-        } catch (IOException e) {
-            throw new StorageException("Failed to read stored files", e);
+    public List<FileDTO> loadAll(int pageNumber) {
+        try {
+            Pageable pageable = PageRequest.of(pageNumber, 5);
+            Page<File> userFilesPage = fileRepository.findByUserId(getCurrentUserId(), pageable);
+
+            return userFilesPage.getContent().stream()
+                    .map(fileMapper::toDTO)
+                    .collect(Collectors.toList());
+        } catch (Exception ex) {
+            throw throwCorrectException.handleException(ex);
         }
     }
 
@@ -118,8 +123,21 @@ public class FileService implements StorageService {
     }
 
     @Override
-    public Resource loadAsResource(String filename) {
-        return null;
+    public Resource loadAsResource(Long fileId) {
+        try {
+            FileDTO fileDTO = getFileDTOById(fileId);
+            validateUserAccessAndFileExistence(fileDTO);
+            Path filePath = Paths.get(fileDTO.getPath()).normalize();
+            Resource resource = new UrlResource(filePath.toUri());
+
+            if (!resource.exists() || !resource.isReadable()) {
+                throw new StorageFileNotFoundException("File not found or not readable: " + fileDTO.getPath());
+            }
+
+            return resource;
+        } catch (Exception ex) {
+            throw throwCorrectException.handleException(ex);
+        }
     }
 
 
@@ -127,20 +145,32 @@ public class FileService implements StorageService {
     @Override
     public void delete(Long fileId, FileType fileType) {
         try {
-            FileDTO fileDTO = fileMapper.toDTO(fileRepository.findById(fileId)
-                    .orElseThrow(() -> new StorageFileNotFoundException("File with provided id not found.")));
-            UserDTO userDTO = authenticationService.getUserDTOFromSecurityContext();
+            FileDTO fileDTO = getFileDTOById(fileId);
+            validateUserAccessAndFileExistence(fileDTO);
+            Path filePath = Path.of(fileDTO.getPath());
+            Files.delete(filePath);
+            fileRepository.deleteById(fileId);
 
-            if (!Objects.equals(fileDTO.getUserId(), userDTO.id())){
-                throw new AccessDeniedException("Access denied - You are not owner of this file.");
-            }
-            // check - is current user owner of file
-            // try to delete file from path
-            // delete file from database
         } catch (Exception ex) {
             throw throwCorrectException.handleException(ex);
         }
     }
+
+    private FileDTO getFileDTOById(Long fileId) {
+        return fileMapper.toDTO(fileRepository.findById(fileId)
+                .orElseThrow(() -> new StorageFileNotFoundException("File with provided id not found.")));
+    }
+
+    private void validateUserAccessAndFileExistence(FileDTO fileDTO) {
+        if (!Objects.equals(fileDTO.getUserId(), getCurrentUserId())) {
+            throw new AccessDeniedException("Access denied - You are not owner of this file.");
+        }
+
+        if (!isFileAlreadyExists(fileDTO.getName())) {
+            throw new StorageFileNotFoundException("File with provided name not found.");
+        }
+    }
+
 
     private String getFileExtension(String filename) {
         String[] parts = filename.split("\\.");
@@ -166,7 +196,7 @@ public class FileService implements StorageService {
         return Files.exists(filePath);
     }
 
-    private Long getFileOwnerId(){
+    private Long getCurrentUserId(){
         return authenticationService.getUserDTOFromSecurityContext().id();
     }
 
